some cleanup and remove depreated apis